# thingyjp-teenynet

./: .travis.yml  README.md  buildconfig.h  config.h.in  dhcp4_client.c  dhcp4_model.c  dhcp4_model.h  dhcp4_server.c  http.c  meson.build  meson_options.txt  packetsocket.c  unix.c
clients/: meson.build  teenydhcpc.c
include/teenynet/: dhcp4_client.h  http.h  unix.h
